--- a/package.json
+++ b/package.json
@@ -16,7 +16,7 @@
     "pretest": "eslint test.js",
     "test": "node test",
     "prestart": "eslint index.mjs",
-    "start": "rollup -f cjs index.mjs > index.js",
+    "start": "rollup -f cjs index.mjs --preferConst > index.js",
     "preexample": "eslint example/index.js",
     "example": "cd example; rollup -f iife index.js > bundle.js"
   },
@@ -27,12 +27,11 @@
     "node": ">=6.11.0",
     "npm": ">=3.10.10"
   },
-  "dependencies": {},
   "devDependencies": {
-    "@thewhodidthis/eslint-config": "latest",
-    "eslint": "latest",
-    "rollup": "latest",
-    "tapeless": "latest"
+    "@thewhodidthis/eslint-config": "^0.0.16",
+    "eslint": "^6.8.0",
+    "rollup": "^1.31.1",
+    "tapeless": "^0.0.9"
   },
   "keywords": [
     "math",
