package: tweak start script

--- a/package.json
+++ b/package.json
@@ -16,7 +16,7 @@
     "pretest": "eslint test.js",
     "test": "node test",
     "prestart": "eslint index.mjs",
-    "start": "rollup -f cjs index.mjs --preferConst > index.js",
+    "start": "rollup -f cjs index.mjs > index.js",
     "preexample": "eslint example/index.js",
     "example": "cd example; rollup -f iife index.js > bundle.js"
   },
