--- a/package.json
+++ b/package.json
@@ -2,42 +2,46 @@
   "name": "@thewhodidthis/swing",
   "version": "0.0.4",
   "description": "Damped pendulum",
-  "main": "index",
-  "module": "index.mjs",
+  "keywords": [
+    "math",
+    "geometry",
+    "mechanics"
+  ],
   "homepage": "https://github.com/thewhodidthis/swing#readme",
+  "bugs": {
+    "url": "https://github.com/thewhodidthis/swing/issues"
+  },
   "repository": {
     "type": "git",
     "url": "git+https://github.com/thewhodidthis/swing.git"
   },
-  "bugs": {
-    "url": "https://github.com/thewhodidthis/swing/issues"
+  "license": "ISC",
+  "author": "Sotiri Bakagiannis <sotirios.bakagiannis@gmail.com> (http://thewhodidthis.com)",
+  "main": "index",
+  "module": "index.mjs",
+  "directories": {
+    "example": "example"
   },
   "scripts": {
-    "pretest": "eslint test.js",
-    "test": "node test",
-    "prestart": "eslint index.mjs",
-    "start": "rollup -f cjs index.mjs > index.js",
     "preexample": "eslint example/index.js",
-    "example": "cd example; rollup -f iife index.js > bundle.js"
+    "example": "cd example; rollup -f iife -o bundle.js index.js",
+    "prestart": "eslint index.mjs",
+    "start": "rollup -f cjs -o index.js index.mjs",
+    "pretest": "eslint test.js",
+    "test": "node test"
   },
   "eslintConfig": {
     "extends": "@thewhodidthis"
   },
-  "engines": {
-    "node": ">=6.11.0",
-    "npm": ">=3.10.10"
-  },
+  "dependencies": {},
   "devDependencies": {
     "@thewhodidthis/eslint-config": "^0.0.17",
     "eslint": "^6.8.0",
     "rollup": "^1.31.1",
     "tapeless": "^0.0.9"
   },
-  "keywords": [
-    "math",
-    "geometry",
-    "mechanics"
-  ],
-  "author": "sChzs BkgNns <sotirios.bakagiannis@gmail.com> (https://www.thewhodidthis.com)",
-  "license": "Unlicense"
+  "engines": {
+    "node": ">=6.11.0",
+    "npm": ">=3.10.10"
+  }
 }
