package: mark as private

--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
   "name": "@thewhodidthis/swing",
   "version": "0.0.5",
+  "private": true,
   "description": "Damped pendulum",
   "keywords": [
     "math",
